feat: restore stable codebase from local backup